--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       const buildUrl = "Build";
       const loaderUrl = buildUrl + "/VocationalTraining_client_Build.loader.js";
       const config = {
-        dataUrl: buildUrl + "/VocationalTraining_client_Build.data",
-        frameworkUrl: buildUrl + "/VocationalTraining_client_Build.framework.js",
-        codeUrl: buildUrl + "/VocationalTraining_client_Build.wasm",
+        dataUrl: buildUrl + "/VocationalTraining_client_Build.data.unityweb",
+        frameworkUrl: buildUrl + "/VocationalTraining_client_Build.framework.js.unityweb",
+        codeUrl: buildUrl + "/VocationalTraining_client_Build.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Hawan",
         productName: "VocationalTraining_client",
