--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         codeUrl: buildUrl + "/VocationalTraining_client_Build.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Hawan",
-        productName: "VocationalTraining_client",
+        productName: "VocationalTraining",
         productVersion: "1.0",
       };
 
